--- a/.github/workflows/cml_action.yml
+++ b/.github/workflows/cml_action.yml
@@ -14,3 +14,9 @@ jobs:
         run: |
           pip install -r requirements.txt
           python train.py
+
+          cat requirements.txt >> report.md
+          cat metrics.txt >> report.md
+          echo '![](./feature_importance_v1.png)' >> report.md
+          echo '![](./residuals.png)' >> report.md
+          cml comment create --publish report.md
